<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ad="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.templateapp.template.view.ui.activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/double_horizontal_margin"
                android:layout_marginEnd="@dimen/double_horizontal_margin">

                <ImageView
                    android:tint="@color/purpleButton"
                    android:layout_width="212dp"
                    android:layout_height="171dp"
                    android:src="@drawable/logov2" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scrollbars="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:backgroundTint="@color/firstTitleSecondary"
                        android:hint="@string/prompt_name"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/blackPrimary"
                        android:textColorHint="@color/firstTitleSecondary" />

                    <EditText
                        android:id="@+id/cpf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:backgroundTint="@color/firstTitleSecondary"
                        android:hint="@string/prompt_cpf"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/blackPrimary"
                        android:textColorHint="@color/firstTitleSecondary" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:backgroundTint="@color/firstTitleSecondary"
                        android:hint="@string/prompt_email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/blackPrimary"
                        android:textColorHint="@color/firstTitleSecondary" />

                    <EditText
                        android:id="@+id/birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:backgroundTint="@color/firstTitleSecondary"
                        android:hint="@string/prompt_date"
                        android:imeOptions="actionNext"
                        android:inputType="date"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/blackPrimary"
                        android:textColorHint="@color/firstTitleSecondary" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:backgroundTint="@color/firstTitleSecondary"
                        android:hint="@string/prompt_phone"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/blackPrimary"
                        android:textColorHint="@color/firstTitleSecondary" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:backgroundTint="@color/firstTitleSecondary"
                        android:hint="@string/prompt_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/blackPrimary"
                        android:textColorHint="@color/firstTitleSecondary" />

                    <EditText
                        android:id="@+id/password_confirmation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:backgroundTint="@color/firstTitleSecondary"
                        android:hint="@string/action_confirm"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        android:textColor="@color/blackPrimary"
                        android:textColorHint="@color/firstTitleSecondary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_horizontal_margin"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="top"
                            android:paddingStart="4dp"
                            android:paddingEnd="@dimen/activity_horizontal_margin"
                            android:text="@string/prompt_gender"
                            android:textColor="@color/firstTitleSecondary"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/man"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="top"
                                android:paddingStart="4dp"
                                android:paddingEnd="@dimen/activity_horizontal_margin"
                                android:text="@string/prompt_gender_man"
                                android:textColor="@color/firstTitleSecondary"
                                android:textSize="18sp" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <CheckBox
                                android:id="@+id/woman"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="top"
                                android:paddingStart="4dp"
                                android:paddingEnd="@dimen/activity_horizontal_margin"
                                android:text="@string/prompt_gender_woman"
                                android:textColor="@color/firstTitleSecondary"
                                android:textSize="18sp" />

                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingTop="@dimen/double_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_submit"
                        style="@style/FullButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:orientation="vertical"
                        android:text="@string/action_sign_up"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:paddingBottom="@dimen/activity_horizontal_margin"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="top"
                        android:text="@string/prompt_has_account"
                        android:textColor="@color/LightGray"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/btn_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingLeft="@dimen/nav_header_horizontal_spacing"
                        android:text="@string/action_login"
                        android:textColor="@color/text_color"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/loading"
        android:indeterminateTint="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:visibility="gone"
        ad:layout_constraintBottom_toBottomOf="parent"
        ad:layout_constraintEnd_toEndOf="parent"
        ad:layout_constraintStart_toStartOf="parent"
        ad:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
