<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clearTaskOnLaunch="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.templateapp.template.view.ui.activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="294dp"
            android:layout_height="304dp"
            android:layout_gravity="center"
            android:paddingTop="64dp">

            <ImageView
                android:tint="@color/purpleButton"
                android:layout_width="match_parent"
                android:layout_height="211dp"
                android:src="@drawable/logov2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="bottom"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:backgroundTint="@color/firstTitleSecondary"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:textColor="@color/blackPrimary"
                android:textColorHint="@color/firstTitleSecondary" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:backgroundTint="@color/firstTitleSecondary"
                android:hint="@string/prompt_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="@color/blackPrimary"
                android:textColorHint="@color/firstTitleSecondary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/loading"
                android:indeterminateTint="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit"
                    style="@style/FullButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:orientation="vertical"
                    android:text="@string/button_advance"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="top"
                    android:text="@string/prompt_no_account"
                    android:textColor="@color/LightGray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/btn_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/nav_header_horizontal_spacing"
                    android:text="@string/action_sign_up"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="visible">

                <TextView
                    android:id="@+id/btn_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="24dp"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/action_forgot_password"
                    android:textColor="@color/text_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
